Fixed double border thickness in recent client on home

--- a/client/src/Components/css/recentClients.css
+++ b/client/src/Components/css/recentClients.css
@@ -17,6 +17,7 @@
 }
 
 .recentClientRow {
+    margin-top: -1;
     border-bottom: 1px solid #b3ddfd;
     height: 1px;
 }
